--- a/index.html
+++ b/index.html
@@ -17,17 +17,20 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Time to break the ice!  Here's a little more about me so we can become fast friends!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from a small town southwest of Chicago called Shorewood in Illinois.  It sits right next to Joliet, IL where I attended high school at Joliet West.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies are loving/raising/playing with my German Shepherd Apollo.  Building computers, working on my car, and most recently learning Spanish!
+      </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Consulting in tech, I love digging into systems and I think regularly analyzing new projects would be a lot of fun!</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Mazon, IL
+        It's a tiny town, I really live on a farm not in a town Mazon is just the mailing address.
+      </p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to explore the world of tech and have the freedom to move anywhere and still find work.</p>
     </section>
 
     <footer id="footer">
